# MustangSalsAssistant

./: .bugs_tracker.md  .build-context.md  .dockerignore  .env.example  .gitignore  Dockerfile  MUSTANG_SAGE_PROJECT_MANIFEST.md  README.md  docker-compose.yml  mustang_sage_v2_4_0_complete.md  mustang_whisper_system_prompt.md  pyproject.toml  sync-kernel.sh
.agents/skills/: GENERIC-01-product-manager-role-skill.md  GENERIC-02-architect-role-skill.md  GENERIC-03-database-manager-role-skill.md  GENERIC-04-infosec-lead-role-skill.md  GENERIC-05-devops-manager-role-skill.md  GENERIC-06-ai-engineer-role-skill.md  GENERIC-07-qa-engineer-role-skill.md  GENERIC-08-data-analyst-role-skill.md  GENERIC-09-compliance-officer-role-skill.md  GENERIC-10-marketing-manager-role-skill.md  GENERIC-11-ux-ui-designer-role-skill.md  GENERIC-12-project-lead-role-skill.md  GENERIC-13-red-team-hacker-role-skill.md  GENERIC-14-devils-advocate-role-skill.md  GENERIC-AGENT-TEMPLATE-SKILL.md  GENERIC-ROLES-MASTER-GUIDE.md
.agents/workflows/: 00_START_HERE.md  01_QUICK_REFERENCE.md  02_COMPLETE_GUIDE.md  03_DEPENDENCY_MANAGEMENT.md  (+11 more)
app/: __init__.py  config.py  db.py  demo_runtime.py  graph.py  main.py
config/: scale.yaml
docs/: AdaptiveCardTemplates.md  AgentSpec.md  Compliance_Data_Playbook.md
schemas/: adaptive_card_schema.json
scripts/: run_scheduler.py
tests/: conftest.py  test_adaptive_cards.py  test_archivist_agent.py  test_audit.py  test_auditor_agent.py  test_comm_engine.py  test_e2e_flow.py  test_guardrails.py  test_liaison_agent.py  test_merchant_agent.py  test_scheduler.py
(+45 files in other folders)
